fix: fix space and double keys size on mobile

--- a/style.css
+++ b/style.css
@@ -88,11 +88,11 @@ body {
 }
 
 .double-key {
-    width: 8vw;
+    width: 124px;
 }
 
 .space-key {
-    width: 30vw;
+    width: 465px;
 }
 
 .up-content {
